[gd_scene load_steps=7 format=3 uid="uid://coywe3miypr2b"]

[ext_resource type="Script" path="res://src/scrips/Objects/Explosion.gd" id="1_dprrh"]
[ext_resource type="Texture2D" uid="uid://b5ad4cy3mx78c" path="res://assets/objects/explosion_1.png" id="2_wn4nt"]
[ext_resource type="AudioStream" uid="uid://dmyw5msqqmhlh" path="res://assets/audio/efectos/bomb_1.wav" id="3_m7g72"]

[sub_resource type="Animation" id="1"]
resource_name = "explosion_0"
length = 0.81
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_wn4nt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [27]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -244)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57, 0.6, 0.63, 0.66, 0.69, 0.72, 0.75, 0.78),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.81),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.21, 0.39),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -164.57)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CollisionShape2D:shape:extents")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(79.622, 164.23)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_po7dl"]
_data = {
"explosion_0": SubResource("1")
}

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(159.244, 328.46)

[node name="Explosion" type="Area2D"]
script = ExtResource("1_dprrh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, -244)
scale = Vector2(3.4, 3.4)
texture = ExtResource("2_wn4nt")
hframes = 27

[node name="SoundExplosion0" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_m7g72")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_po7dl")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -164.57)
shape = SubResource("2")
disabled = true

[connection signal="body_entered" from="." to="." method="_on_Explosion_body_entered"]
[connection signal="finished" from="SoundExplosion0" to="." method="_on_SoundExplosion0_finished"]
